# VisGuiAI

backend/: .coverage  COMPRESSION_CHANGES_SUMMARY.md  COMPRESSION_IMPLEMENTATION_REPORT.md  DATABASE_OPTIMIZATION_REPORT.md  Dockerfile  README.md  TESTING_RECOMMENDATIONS.md  TEST_REPORT_TASK_2.2.md  alembic.ini  examples_sorting_usage.py  fix_exception_handling.py  fix_raises.py  generate_openapi.py  pyproject.toml  pytest.ini  run_tests.sh  test_compression.py  test_compression.sh  test_e2e_guide_generation.py  test_e2e_verification.py  test_error_handling.py  test_lm_studio.py  validate_week1.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_with_adaptation.py  05cd0c5ac23c_add_users_table_for_authentication.py  23cf83858f53_change_difficulty_level_to_string.py  2de9b01161ee_add_is_admin_field_to_users_table.py  2ff9dfb1c619_recreate_all_tables.py  50fc9a262337_add_database_indexes_for_performance.py  bea21284f289_add_user_usage_table_for_quota_tracking.py
backend/alembic/versions/backup/: 001_add_sections_and_update_guide_structure.py  002_add_step_adaptation_support.py
backend/config/: pricing.yaml  user_settings.yaml
backend/docs/: ACTION_CHECKLIST.md  API_EXAMPLES.md  BUGS_FOUND.md  CODE_QUALITY_REPORT.md  CODE_REFACTORING_SUMMARY.md  DEV_SETUP_GUIDE.md  DUPLICATE_CODE_REPORT.md  ERROR_HANDLING_IMPLEMENTATION.md  FASTAPI_ERROR_INVESTIGATION_REPORT.md  GUIDE_ADAPTATION_FEATURE.md  GUIDE_GENERATION_TEST_PLAN.md  GUIDE_SERVICE_UPDATE.md  IMPORT_FIX_REPORT.md  LM_STUDIO_SETUP.md  MIGRATION_FIX_REPORT.md  PYPROJECT_FIX.md  SESSION_SERVICE_CHANGES.md  SORTING_UTILITY_GUIDE.md  STEP_DISCLOSURE_MIGRATION.md  STEP_PROGRESSION_TEST_PLAN.md  TASK_COMPLETION_SUMMARY.md  TESTING_SESSION_REPORT.md  TEST_FIXTURES_IMPLEMENTATION_SUMMARY.md  TEST_FIXTURES_QUICK_REFERENCE.md  TEST_SETUP.md  UNUSED_CODE_REPORT.md  USER_QUOTA_SCHEMA.md  WEEK1_COMPLETION_REPORT.md  WEEK1_FINAL_SUMMARY.md  api-docs.html  openapi.json
backend/src/: __init__.py  exceptions.py  main.py
backend/src/api/: admin.py  auth.py  guides.py  instruction_guides.py  progress.py  sessions.py  steps.py
backend/src/auth/: admin.py  middleware.py
backend/src/core/: cache.py  config.py  database.py  redis.py
backend/src/middleware/: __init__.py  query_timing.py  rate_limiter.py
backend/src/models/: database.py  user.py
backend/src/services/: abuse_detection.py  auth_service.py  guide_adaptation_service.py  guide_service.py  llm_service.py  progress_service.py  session_service.py  step_disclosure_service.py  step_service.py
backend/src/shared/: __init__.py
backend/src/shared/billing/: __init__.py  cost_calculator.py
backend/src/shared/config/: __init__.py  config_loader.py
backend/src/shared/db/models/: __init__.py  usage.py
backend/src/shared/usage/: __init__.py  usage_service.py
backend/src/utils/: __init__.py  logging.py  sorting.py  validation.py
backend/tests/: conftest.py  test_fixtures_example.py  test_instruction_guides_integration.py  test_sorting.py
backend/tests/contract/: test_guides_generate.py  test_health_get.py  test_sessions_create.py  test_sessions_get.py  test_steps_complete.py
backend/tests/integration/: test_complete_flow.py
backend/tests/unit/: test_bug_fixes_2_5.py
